etapa13: migrar servicios y capa web al modelo del repositorio de referencia  - pom.xml: actualizar a spring-boot-starter-parent 3.5.0, Java 21, Lombok 1.18.38, agregar java-dotenv - security: convertir PasswordHasher y SessionTokenGenerator a interfaces; agregar BCryptPasswordHasher y UuidSessionTokenGenerator como @Component - services: reemplazar almacenamiento en memoria con repositorios JPA en CartService, OrderService, UserService, AddressService, UserSessionService - model/dto: agregar campo image a Product y ProductDTO - config: restaurar AppConfig como clase utilitaria; agregar WebConfig (CORS) y DotenvDevelopmentLoader - exceptions: agregar AuthenticationException y AuthorizationException - application/: agregar capa de servicios de aplicacion (AddressApplicationService, AdminUserApplicationService, AuthApplicationService, CartApplicationService, CatalogApplicationService, OrderApplicationService, UserProfileApplicationService) - web/: agregar controladores REST v1, DTOs de request/response, manejo de errores y seguridad de capa web - demo: agregar DemoDataSeeder para perfil demo  Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>